bk_ida/gccida/c0/replace_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/rtlanal.c:2906:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/rtlanal.c:2906:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/rtlanal.c:2908:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/rtlanal.c:2908:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/rtlanal.c:2926:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/rtlanal.c:2926:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/rtlanal.c:2928:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/rtlanal.c:2928:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint)); 
                 ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/replace_rtx/src/obj/rtlanal.o] Error 1
